Added chord diagram for subreddit mentions, partitions by top pos/neg/godwin scores, added 2 more month data sets (not fully run yet)

--- a/visualization/chord_diagram.html
+++ b/visualization/chord_diagram.html
@@ -25,13 +25,13 @@ path.chord {
 
 <h1>Mentions of subreddits</h1>
 
-<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js" charset="utf-8"></script>
 <script>
 
-var width = 720,
-    height = 720,
+var width = 1500,
+    height = 1500,
     outerRadius = Math.min(width, height) / 2 - 10,
-    innerRadius = outerRadius - 24;
+    innerRadius = outerRadius - 100;
 
 var formatPercent = d3.format(".1%");
 
@@ -57,72 +57,68 @@ var svg = d3.select("body").append("svg")
 svg.append("circle")
     .attr("r", outerRadius);
 
-queue()
-    .defer(d3.csv, "subreddit_lookup.csv")
-    .defer(d3.json, "subreddit_mentions.json")
-    .await(ready);
+d3.csv("subreddit_lookup.csv", function(cities) {
+  d3.json("subreddit_mentions.json", function(matrix) {
 
-function ready(error, cities, matrix) {
-  if (error) throw error;
+    // Compute the chord layout.
+    layout.matrix(matrix);
 
-  // Compute the chord layout.
-  layout.matrix(matrix);
+    // Add a group per neighborhood.
+    var group = svg.selectAll(".group")
+        .data(layout.groups)
+      .enter().append("g")
+        .attr("class", "group")
+        .on("mouseover", mouseover);
 
-  // Add a group per neighborhood.
-  var group = svg.selectAll(".group")
-      .data(layout.groups)
-    .enter().append("g")
-      .attr("class", "group")
-      .on("mouseover", mouseover);
-
-  // Add a mouseover title.
-  group.append("title").text(function(d, i) {
-    return cities[i].name + ": " + formatPercent(d.value) + " of origins";
-  });
-
-  // Add the group arc.
-  var groupPath = group.append("path")
-      .attr("id", function(d, i) { return "group" + i; })
-      .attr("d", arc)
-      .style("fill", function(d, i) { return cities[i].color; });
-
-  // Add a text label.
-  var groupText = group.append("text")
-      .attr("x", 6)
-      .attr("dy", 15);
-
-  groupText.append("textPath")
-      .attr("xlink:href", function(d, i) { return "#group" + i; })
-      .text(function(d, i) { return cities[i].name; });
-
-  // Remove the labels that don't fit. :(
-  groupText.filter(function(d, i) { return groupPath[0][i].getTotalLength() / 2 - 16 < this.getComputedTextLength(); })
-      .remove();
-
-  // Add the chords.
-  var chord = svg.selectAll(".chord")
-      .data(layout.chords)
-    .enter().append("path")
-      .attr("class", "chord")
-      .style("fill", function(d) { return cities[d.source.index].color; })
-      .attr("d", path);
-
-  // Add an elaborate mouseover title for each chord.
-  chord.append("title").text(function(d) {
-    return cities[d.source.index].name
-        + " → " + cities[d.target.index].name
-        + ": " + formatPercent(d.source.value)
-        + "\n" + cities[d.target.index].name
-        + " → " + cities[d.source.index].name
-        + ": " + formatPercent(d.target.value);
-  });
-
-  function mouseover(d, i) {
-    chord.classed("fade", function(p) {
-      return p.source.index != i
-          && p.target.index != i;
+    // Add a mouseover title.
+    group.append("title").text(function(d, i) {
+      return cities[i].name + ": " + formatPercent(d.value) + " of origins";
     });
-  }
-}
+
+    // Add the group arc.
+    var groupPath = group.append("path")
+        .attr("id", function(d, i) { return "group" + i; })
+        .attr("d", arc)
+        .style("fill", function(d, i) { return cities[i].color; });
+
+    // Add a text label.
+    var groupText = group.append("text")
+        .attr("x", 6)
+        .attr("dy", 15);
+
+    groupText.append("textPath")
+        .attr("xlink:href", function(d, i) { return "#group" + i; })
+        .text(function(d, i) { return cities[i].name; });
+
+    // Remove the labels that don't fit. :(
+    //groupText.filter(function(d, i) { return groupPath[0][i].getTotalLength() / 2 - 16 < this.getComputedTextLength(); })
+    //    .remove();
+
+    // Add the chords.
+    var chord = svg.selectAll(".chord")
+        .data(layout.chords)
+      .enter().append("path")
+        .attr("class", "chord")
+        .style("fill", function(d) { return cities[d.source.index].color; })
+        .attr("d", path);
+
+    // Add an elaborate mouseover title for each chord.
+    chord.append("title").text(function(d) {
+      return cities[d.source.index].name
+          + " → " + cities[d.target.index].name
+          + ": " + formatPercent(d.source.value)
+          + "\n" + cities[d.target.index].name
+          + " → " + cities[d.source.index].name
+          + ": " + formatPercent(d.target.value);
+    });
+
+    function mouseover(d, i) {
+      chord.classed("fade", function(p) {
+        return p.source.index != i
+            && p.target.index != i;
+      });
+    }
+  });
+});
 
 </script>
