fixed some bugs, filtering on data subset and month works

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -5,28 +5,25 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet' type='text/css'>
-    
-
   </head>
 
   <body>
-    <h1>August 2016 Reddit Comments</h1>
-    <div class="xPicker">
-        X Axis:
+    <h1>2016 Reddit Comments</h1>
+    <center>
+    <div class="xPicker sameLine">
+        <p class="h3 sameLine">X Axis:</p>
     </div>
-    <div class="yPicker">
-        Y Axis:
+    <div class="yPicker sameLine" style="margin-left: 35px">
+        <p class="h3 sameLine">Y Axis:</p>
     </div>
-    <br><br>
+</center>
     <div class="wrap">
       <div class="basePlot"></div>
     </div>
-    <br><br>
     <div class="sameLine">
         <div id="heatmap1" class="sameLine"></div>
         <div id="heatmap2" class="sameLine"></div>
     </div>
-    <h2 id="subreddit-name"></h2>
     <h2 id="month-name"></h2>
     <h2 id="filter-name"></h2>
     <div id="dataset-picker">
@@ -43,15 +40,16 @@
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
     <!-- D3 library -->
-    <script src="d3.js" charset="utf-8"></script>
+    <script src="d3.min.js" charset="utf-8"></script>
 
+    <!--
     <script
         src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
-    <!-- D3 library -->
+ 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js" charset="utf-8"></script>
-
+    -->
     <!-- Our js files -->
     <script src="scatter.js"></script>
 
