--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -10,20 +10,6 @@
   <body>
     <h1>2016 Reddit Comments</h1>
     <center>
-    <div class="xPicker sameLine">
-        <p class="h3 sameLine">X Axis:</p>
-    </div>
-    <div class="yPicker sameLine" style="margin-left: 35px">
-        <p class="h3 sameLine">Y Axis:</p>
-    </div>
-</center>
-    <div class="wrap">
-      <div class="basePlot"></div>
-    </div>
-    <div class="sameLine">
-        <div id="heatmap1" class="sameLine"></div>
-        <div id="heatmap2" class="sameLine"></div>
-    </div>
     <h2 id="month-name"></h2>
     <h2 id="filter-name"></h2>
     <div id="dataset-picker">
@@ -31,9 +17,24 @@
     <br><br>
     <div id="filter-picker">
     </div>
-    <br><br>
-    <div id="subreddit-picker">
+    <div class="sorter sameLine">
     </div>
+    <div class="xPicker sameLine" style="margin-left: 10px">
+        <p class="h3 sameLine">X Axis:</p>
+    </div>
+    <div class="yPicker sameLine" style="margin-left: 25px">
+        <p class="h3 sameLine">Y Axis:</p>
+    </div>
+    </center>
+    <br>
+    <div class="wrap">
+      <div class="basePlot"></div>
+    </div>
+    <div class="sameLine">
+        <div id="heatmap1" class="sameLine"></div>
+        <div id="heatmap2" class="sameLine"></div>
+    </div>
+    <br><br>
 
     <script
         src="jquery-3.1.1.min.js"
