Added small multiples

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -10,11 +10,9 @@
   <body>
     <h1>2016 Reddit Comments</h1>
     <center>
-    <h2 id="month-name"></h2>
-    <h2 id="filter-name"></h2>
+    <span class="sameline h3" id="month-name"></span><span class="sameline h3" style="margin-left: 30px" id="filter-name"></span>
     <div id="dataset-picker">
     </div>
-    <br><br>
     <div id="filter-picker">
     </div>
     <div class="sorter sameLine">
@@ -27,30 +25,28 @@
     </div>
     </center>
     <br>
-    <div class="wrap">
+    <div class="wra p">
       <div class="basePlot"></div>
     </div>
     <div class="sameLine">
         <div id="heatmap1" class="sameLine"></div>
         <div id="heatmap2" class="sameLine"></div>
     </div>
+    <div class="smallMultiples"></div>
     <br><br>
-
     <script
         src="jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
-    <!-- D3 library -->
     <script src="d3.min.js" charset="utf-8"></script>
+    -->
 
-    <!--
     <script
         src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js" charset="utf-8"></script>
-    -->
     <!-- Our js files -->
     <script src="scatter.js"></script>
 
