Added subreddit subsets, fixed hover bar animations to work with it

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -11,10 +11,13 @@
     <h1>2016 Reddit Comments</h1>
     <center>
     <span class="sameline h3" id="month-name"></span><span class="sameline h3" style="margin-left: 30px" id="filter-name"></span>
+    <div id="subredditsubset-picker">
+    </div>
     <div id="dataset-picker">
     </div>
     <div id="filter-picker">
     </div>
+    
     <div class="sorter sameLine">
     </div>
     <div class="xPicker sameLine" style="margin-left: 10px">
