Added list of subreddits from which you can toggle in the graph

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -19,6 +19,8 @@
     <div id="filter-picker">
     </div>
     </center>
+    <select multiple class="toggleSubreddits">
+    </select> 
     <br>
     <div class="wrap">
         <table>
