--- a/visualization/chord_diagram.html
+++ b/visualization/chord_diagram.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html>
 <meta charset="utf-8">
-<title>Mentions of subreddits</title>
 <style>
 #circle circle {
-  fill: none;
-  pointer-events: all;
+    fill: none;
+    pointer-events: all;
 }
 
 .group path {
   fill-opacity: .5;
 }
 
-path.chord {
-  stroke: #000;
-  stroke-width: .25px;
-}
-
 #circle:hover path.fade {
   display: none;
 }
 
+body{
+font-family: Verdana;
+    font-size: 10px;
+}
 </style>
-
-<h1>Mentions of subreddits</h1>
-
+<body>
+<div class="redditChord" align="center"></div>
+</body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js" charset="utf-8"></script>
 <script>
 
-var width = 1500,
-    height = 1500,
-    outerRadius = Math.min(width, height) / 2 - 10,
-    innerRadius = outerRadius - 100;
+var width = 700,
+    height = 700,
+    outerRadius = Math.min(width, height) / 2 - 105,
+    innerRadius = outerRadius - 20;
 
 var formatPercent = d3.format(".1%");
 
@@ -40,19 +38,19 @@ var arc = d3.svg.arc()
     .outerRadius(outerRadius);
 
 var layout = d3.layout.chord()
-    .padding(.04)
+    .padding(.044)
     .sortSubgroups(d3.descending)
     .sortChords(d3.ascending);
 
 var path = d3.svg.chord()
     .radius(innerRadius);
 
-var svg = d3.select("body").append("svg")
+var svg = d3.select(".redditChord").append("svg")
     .attr("width", width)
     .attr("height", height)
   .append("g")
     .attr("id", "circle")
-    .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+    .attr("transform", "translate(" + (width  ) / 2 + "," + height / 2 + ")");
 
 svg.append("circle")
     .attr("r", outerRadius);
@@ -81,14 +79,18 @@ d3.csv("subreddit_lookup.csv", function(cities) {
         .attr("d", arc)
         .style("fill", function(d, i) { return cities[i].color; });
 
-    // Add a text label.
-    var groupText = group.append("text")
-        .attr("x", 6)
-        .attr("dy", 15);
-
-    groupText.append("textPath")
-        .attr("xlink:href", function(d, i) { return "#group" + i; })
-        .text(function(d, i) { return cities[i].name; });
+      group.append("text")
+              .each(function(d) { d.angle = ((d.startAngle + d.endAngle) / 2);})
+              .attr("dy", ".35em")
+              .attr("class", "titles")
+              .attr("text-anchor", function(d) { return d.angle > Math.PI ? "end" : null; })
+              .attr("transform", function(d,i) {
+                  var c = arc.centroid(d + 10);
+                  return "rotate(" + (d.angle * 180 / Math.PI - 90) + ")"
+                          + "translate(" + (innerRadius + 30) + ")"
+                          + (d.angle > Math.PI ? "rotate(180)" : "")
+              })
+              .text(function(d,i) { return cities[i].name; });
 
     // Remove the labels that don't fit. :(
     //groupText.filter(function(d, i) { return groupPath[0][i].getTotalLength() / 2 - 16 < this.getComputedTextLength(); })
