--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -9,16 +9,17 @@
   </head>
 
   <body>
+    
+    <div class="navbar-fixed-top">
+        <span class="sameline h3" id="month-name"></span><span class="sameline h3" style="margin-left: 30px" id="filter-name"></span>
+        <div id="subredditsubset-picker">
+        </div>
+        <div id="dataset-picker">
+        </div>
+        <div id="filter-picker">
+        </div>
+    </div>
     <h1>2016 Reddit Comments</h1>
-    <center>
-    <span class="sameline h3" id="month-name"></span><span class="sameline h3" style="margin-left: 30px" id="filter-name"></span>
-    <div id="subredditsubset-picker">
-    </div>
-    <div id="dataset-picker">
-    </div>
-    <div id="filter-picker">
-    </div>
-    </center>
     <select multiple class="toggleSubreddits">
     </select> 
     <br>
