--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -42,6 +42,7 @@
     </select>
     <div id="subredditsubset-picker">
     </div>
+    <select class="selectpicker" id="subredditsubset-picker2"></select>
     <br><br>
     <br>
     <div class="wrap">
