Fixed small multiples filtering, removed old buttons used in filtering

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -17,10 +17,7 @@
 
     <div class="navbar-fixed-top">
         <span class="sameline h3" id="month-name"></span><span class="sameline h3" style="margin-left: 30px" id="filter-name"></span>
-        <div id="dataset-picker">
-        </div>
-        <div id="filter-picker">
-        </div>
+        <br>
         <input id="month-slider" type="text" style="width: 700px; fill: white"
           data-provide="slider"
           data-slider-ticks="[1, 2, 3, 4, 5, 6, 7, 8]"
@@ -31,7 +28,7 @@
           data-slider-value="8"
           data-slider-tooltip="hide"></input>
         <br>
-        <select class="selectpicker" id="filter-picker2"></select>
+        <select class="selectpicker" id="filter-picker"></select>
         <br>
         
 
@@ -40,9 +37,7 @@
     <h1>2016 Reddit Comments</h1>
     <select multiple class="selectpicker" id="toggleSubreddits" title="Choose Subreddits" data-live-search="true" data-max-options="25">
     </select>
-    <div id="subredditsubset-picker">
-    </div>
-    <select class="selectpicker" id="subredditsubset-picker2"></select>
+    <select class="selectpicker" id="subredditsubset-picker"></select>
     <br><br>
     <br>
     <div class="wrap">
