--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -12,12 +12,9 @@
     <link href='style.css' rel='stylesheet' type='text/css'>
     <link href='chord.css' rel='stylesheet' type='text/css'>
   </head>
-
   <body>
-
     <div class="navbar-fixed-top">
-        <span class="sameline h3" id="month-name"></span><span class="sameline h3" style="margin-left: 30px" id="filter-name"></span>
-        <br>
+        <p style="font-size: 18px"><b>2016 Reddit Comments</b></p>
         <input id="month-slider" type="text" style="width: 700px; fill: white"
           data-provide="slider"
           data-slider-ticks="[1, 2, 3, 4, 5, 6, 7, 8]"
@@ -29,17 +26,10 @@
           data-slider-tooltip="hide"></input>
         <br>
         <select class="selectpicker" id="filter-picker"></select>
-        <br>
-        
-
     </div>
-    
-    <h1>2016 Reddit Comments</h1>
-    <select multiple class="selectpicker" id="toggleSubreddits" title="Choose Subreddits" data-live-search="true" data-max-options="25">
-    </select>
+    <select multiple class="selectpicker" id="toggleSubreddits" title="Choose Subreddits" data-live-search="true" data-max-options="25"></select>
     <select class="selectpicker" id="subredditsubset-picker"></select>
     <br><br>
-    <br>
     <div class="wrap">
         <table>
             <tr>
