Animated all the main graph transitions with enter/update/exit, cleaned up top of page

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -40,7 +40,8 @@
                     <br><br><br><br><br><br><br><br>
                 </td>
                 <td>
-                    <div class="basePlot sameLine"></div>
+                    <div class="barchart sameLine"></div>
+                    <div class="scatterplot sameLine"></div>
                     
                 </td>
             </tr>
