Made scatterplot dots fixed size, labels to filters, added about dialog with info about the project

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -14,7 +14,11 @@
   </head>
   <body>
     <div class="navbar-fixed-top" style="border-style: solid">
-        <p style="font-size: 18px"><b>2016 Reddit Comments</b></p>
+        <!-- <p style="font-size: 18px"><b>2016 Reddit Comments</b></p>-->
+        <!-- Trigger the modal with a button -->
+        <button type="button" class="btn btn-info about" data-toggle="modal" data-target="#aboutModal">2016 Reddit Comments: About</button>
+        <br><br>
+        <span class="h4" style="margin-right: 50px">Month:</span>
         <input id="month-slider" type="text" style="width: 700px; fill: white"
           data-provide="slider"
           data-slider-ticks="[1, 2, 3, 4, 5, 6, 7, 8]"
@@ -44,8 +48,58 @@
         <br>
     </div>
 
-    <div class="sorter sameLine"></div>
+    
+
+    <!-- Modal -->
+    <div id="aboutModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <center>
+                <p class="modal-title h2" style="text-align: center">2016 Reddit Comments Visualization</p>
+            </center>
+          </div>
+          <div class="modal-body">
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This project aims to visualize how various subreddits differ in comment volume, comment sentiment, and comment time distributions throughout the first 9 months of 2016. You will also find other variables that concern the nature of the comments. We utilized the publicly available Reddit comments datasets found on <a href="http://files.pushshift.io/reddit/comments/">pushshift.io</a>.
+            <br><br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;There are a few different components to our visualization: an overview of subreddits, smaller visualizations that compare two subreddits in detail, and an extra visualization of how often subreddits mention each other. Relevant filters will be visible for the appropriate visualizations. Left clicking or control+left clicking on subreddits in the main visualization will choose the first and second subreddits to compare, respectively. 
+
+            The comment subset filter allows for filtering on special subsets of the comments for a given subreddit:
+
+            <ul>
+                <li><b>All Comments</b>: All the comments!</li>
+                <li><b>Top Score Comments</b>: Only the top 5% of comments by score within each subreddit</li>
+                <li><b>Bottom Score Comments</b>: Only the bottom 5% of comments by scoe within each subreddit</li>
+                <li><b>Most Popular Authors</b>: Only the top 5% of authors by comment volume within each subreddit</li>
+                <li><b>Top Positive Comments</b>: Only comments with a positive score of at least 25</li>
+                <li><b>Top Negative Comments</b>: Only comments with a negative score of at least 15</li>
+                <li><b>Top Godwin Comments</b>: Only comments with a positive Godwin score</li>
+            </ul>
+
+            <p>This visualization was implemented by four undergraduate students for the class Intro to Information Visualization (CS 4460). You can find our code on <a href="https://github.com/gwrong/infovis4460">GitHub</a>. Members include:
+                <ul>
+                    <li>Graham Wright</li>
+                    <li>Kim Nguyen</li>
+                    <li>Forester Vosburgh</li>
+                    <li>Eric Wan</li>
+                </ul>
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
+    <div class="sorter sameLine" style="margin-right: 10px"></div>
+    <span class="h4" style="margin-right: 10px">Subreddits:</span>
     <select multiple class="selectpicker" id="toggleSubreddits" title="Choose Subreddits" data-live-search="true" data-max-options="25"></select>
+    <span class="h4" style="margin-right: 10px; margin-left: 10px">Subreddit Presets:</span>
     <select class="selectpicker" id="subredditsubset-picker"></select>
     <br><br>
     <div class="wrap">
