Combined data files, added subreddits, preparing to add september data, removed chord logging, added swear comment subset

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -21,12 +21,12 @@
         <span class="h4" style="margin-right: 50px">Month:</span>
         <input id="month-slider" type="text" style="width: 700px; fill: white"
           data-provide="slider"
-          data-slider-ticks="[1, 2, 3, 4, 5, 6, 7, 8]"
-          data-slider-ticks-labels='["January 2016", "February 2016", "March 2016", "April 2016", "May 2016", "June 2016", "July 2016", "August 2016"]'
+          data-slider-ticks="[1, 2, 3, 4, 5, 6, 7, 8, 9]"
+          data-slider-ticks-labels='["January 2016", "February 2016", "March 2016", "April 2016", "May 2016", "June 2016", "July 2016", "August 2016", "September 2016"]'
           data-slider-min="1"
-          data-slider-max="8"
+          data-slider-max="9"
           data-slider-step="1"
-          data-slider-value="8"
+          data-slider-value="9"
           data-slider-tooltip="hide"></input>
         <br><br>
         <table>
@@ -47,8 +47,6 @@
         </table>
         <br>
     </div>
-
-    
 
     <!-- Modal -->
     <div id="aboutModal" class="modal fade" role="dialog">
@@ -76,6 +74,7 @@
                 <li><b>Top Positive Comments</b>: Only comments with a positive score of at least 25</li>
                 <li><b>Top Negative Comments</b>: Only comments with a negative score of at least 15</li>
                 <li><b>Top Godwin Comments</b>: Only comments with a positive Godwin score</li>
+                <li><b>Top Swear Comments</b>: Only comments with a swear score of at least 35</li>
             </ul>
 
             <p>This visualization was implemented by four undergraduate students for the class Intro to Information Visualization (CS 4460). You can find our code on <a href="https://github.com/gwrong/infovis4460">GitHub</a>. Members include:
