Added axis labels to main viz, centered main viz

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -101,7 +101,7 @@
     <span class="h4" style="margin-right: 10px; margin-left: 10px">Subreddit Presets:</span>
     <select class="selectpicker" id="subredditsubset-picker"></select>
     <br><br>
-    <div class="wrap">
+    <div>
         <div class="barchart sameLine"></div>
         <div class="scatterplot sameLine"></div>
     </div>
