Added some instructions for the comment subset options

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -41,7 +41,7 @@
         </td>
         <td>
             <span style="vertical-align: middle;" class="h4">Comments subset:&nbsp;&nbsp;&nbsp;</span>
-            <select class="selectpicker" id="filter-picker"></select>
+            <select class="selectpicker" id="filter-picker"></select><i style="font-size: 22px; vertical-align: middle; margin-left: 10px" class='glyphicon glyphicon-info-sign commentSubsetInfo'></i>
         </td>
         </tr>
         </table>
