Added tip for choosing subreddits

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -43,7 +43,7 @@
         </td>
         <td>
             <span style="vertical-align: middle;" class="h4">Comments subset:&nbsp;&nbsp;&nbsp;</span>
-            <select class="selectpicker" id="filter-picker"></select><i style="font-size: 22px; vertical-align: middle; margin-left: 10px" class='glyphicon glyphicon-info-sign commentSubsetInfo'></i>
+            <select class="selectpicker" id="filter-picker"></select><i style="font-size: 22px; vertical-align: middle; margin-left: 10px;" class='glyphicon glyphicon-info-sign commentSubsetInfo'></i>
         </td>
         </tr>
         </table>
@@ -64,8 +64,8 @@
           <div class="modal-body">
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This project aims to visualize how various subreddits differ in comment volume, comment sentiment, and comment time distributions throughout the first 9 months of 2016. You will also find other variables that concern the nature of the comments. We utilized the publicly available Reddit comments datasets found on <a href="http://files.pushshift.io/reddit/comments/">pushshift.io</a>.
             <br><br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;There are a few different components to our visualization: an overview of subreddits, smaller visualizations that compare two subreddits in detail, and an extra visualization of how often subreddits mention each other. Relevant filters will be visible for the appropriate visualizations. Left clicking or control+left clicking on subreddits in the main visualization will choose the first and second subreddits to compare, respectively. 
-
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;There are a few different components to our visualization: an overview of subreddits, smaller visualizations that compare two subreddits in detail, and an extra visualization of how often subreddits mention each other. Relevant filters will be visible for the appropriate visualizations.
+            <br><br>Left clicking or control+left clicking on subreddits in the main visualization will choose the first and second subreddits to compare, respectively. 
             The comment subset filter allows for filtering on special subsets of the comments for a given subreddit:
 
             <ul>
@@ -104,8 +104,8 @@
     <br><br>
     <div>
         
-        <div class="barchart sameLine"><h4>Which subreddits dominate each variable/category?</h4><br></div>
-        <div class="scatterplot sameLine"><h4>Are there relationships between certain variables?</h4><br></div>
+        <div class="barchart sameLine"><h4 class="wrap">Which subreddits dominate each variable/category? <i style="font-size: 18px; vertical-align: middle; margin-left: 10px" class='glyphicon glyphicon-question-sign mainVizQuestion'></i></h4><br></div>
+        <div class="scatterplot sameLine"><h4>Are there relationships between certain variables?<i style="font-size: 18px; vertical-align: middle; margin-left: 10px" class='glyphicon glyphicon-question-sign mainVizQuestion'></i></h4><br></div>
     </div>
     <br>
     <div class="sameLine">
