Remove resizable navbar

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -15,7 +15,7 @@
   <body>
     <div id="spinner" style="text-align: center;">
         </div>
-    <div class="navbar-fixed-top" style="border-style: solid; resize: vertical; overflow: auto;">
+    <div class="navbar-fixed-top" style="border-style: solid;">
         <!-- <p style="font-size: 18px"><b>2016 Reddit Comments</b></p>-->
         <!-- Trigger the modal with a button -->
         <button type="button" class="btn btn-info about" data-toggle="modal" data-target="#aboutModal">2016 Reddit Comments: About</button>
