Changed some labels

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -66,11 +66,11 @@
     </div>
 
     <div class="menu">
-        <a href="/first" data-panel="mainVizPanel">Main Viz</a>
-        <a href="/second" data-panel="heatMapsPanel">Heat Maps</a>
-        <a href="/third" data-panel="wordCloudsPanel">Word Clouds</a>
-        <a href="/third" data-panel="smallMultiplesPanel">Small Multiples</a>
-        <a href="/third" data-panel="chordPanel">Chord Diagram</a>
+        <a href="/mainVizPanel" data-panel="mainVizPanel">Main Viz</a>
+        <a href="/heatMapsPanel" data-panel="heatMapsPanel">Heat Maps</a>
+        <a href="/wordCloudsPanel" data-panel="wordCloudsPanel">Word Clouds</a>
+        <a href="/smallMultiplesPanel" data-panel="smallMultiplesPanel">Small Multiples</a>
+        <a href="/chordPanel" data-panel="chordPanel">Chord Diagram</a>
     </div>
 
     <section data-panel="mainVizPanel">
