Moved section links to bottom right

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -65,7 +65,7 @@
         <br>
     </div>
 
-    <div class="menu">
+    <div class="menu element">
         <a href="/mainVizPanel" data-panel="mainVizPanel">Main Viz</a>
         <a href="/heatMapsPanel" data-panel="heatMapsPanel">Heat Maps</a>
         <a href="/wordCloudsPanel" data-panel="wordCloudsPanel">Word Clouds</a>
