Added button and links to sections

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -73,6 +73,9 @@
         <a href="/chordPanel" data-panel="chordPanel">Chord Diagram</a>
     </div>
 
+    <input type="checkbox" name="toggle" id="toggle" />
+    <label for="toggle"></label>
+
     <section data-panel="mainVizPanel">
         <div>
             <div class="barchart sameLine"><h4 class="wrap">Which subreddits dominate each variable/category? <i style="font-size: 18px; vertical-align: middle; margin-left: 10px" class='glyphicon glyphicon-question-sign mainVizQuestion'></i></h4><br></div>
