Made default button go to close

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -73,7 +73,7 @@
         <a href="/chordPanel" data-panel="chordPanel">Chord Diagram</a>
     </div>
 
-    <input type="checkbox" name="toggle" id="toggle" />
+    <input type="checkbox" name="toggle" id="toggle" checked="checked"/>
     <label for="toggle"></label>
 
     <section data-panel="mainVizPanel">
