Filters hide for certain vizs

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -33,16 +33,16 @@
         <br><br>
         <table>
         <tr>
-        <td style="width: 500px">
+        <td class="commentSubsettd" style="width: 500px">
             <span style="vertical-align: middle;" class="h4">Comments subset:&nbsp;&nbsp;&nbsp;</span>
             <select class="selectpicker" id="filter-picker"></select><i style="font-size: 22px; vertical-align: middle; margin-left: 10px;" class='glyphicon glyphicon-info-sign commentSubsetInfo'></i>
             
         </td>
-        <td style="text-align: left;">
+        <td class="xPickertd" style="text-align: left;">
             <span style="vertical-align: middle;" class="h4">X Variable:&nbsp;&nbsp;&nbsp;</span>
             <select class="selectpicker" id="xPicker"></select>
         </td>
-        <td style="text-align: left;">
+        <td class="yPickertd" style="text-align: left;">
             <span style="vertical-align: middle;" class="h4">Y Variable:&nbsp;&nbsp;&nbsp;</span>
             <select class="selectpicker" id="yPicker"></select>
         </td>
@@ -51,12 +51,12 @@
         <br>
         <table style="width: 800px">
         <tr>
-        <td>
+        <td class="chooseSubredditstd" >
             <span class="h4" style="vertical-align: middle;">Subreddits:&nbsp;&nbsp;&nbsp;</span>
             <select multiple class="selectpicker" id="toggleSubreddits" title="Choose Subreddits" data-live-search="true" data-max-options="25"></select>
     
         </td>
-        <td>
+        <td class="subredditSubsettd" >
             <span class="h4" style="vertical-align: middle;">Subreddit Presets:&nbsp;&nbsp;&nbsp;</span>
             <select class="selectpicker" id="subredditsubset-picker"></select>
         </td>
