see previous commit

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -84,8 +84,8 @@
         <div class="sameLine">
             <h4>How do subreddit lexicons differ?</h4>
             <br>
-            <img class="wordcloud1" style="margin-right: 50px"/>
-            <img class="wordcloud2"/>
+            <img class="wordcloud1 img-rounded" style="margin-right: 50px"/>
+            <img class="wordcloud2 rimg-rounded"/>
         </div>
     </section>
 
@@ -94,7 +94,7 @@
         <div>
         <h4 class="chordQuestion">How connected is Reddit?</select><i style="font-size: 18px; vertical-align: middle; margin-left: 10px" class='glyphicon glyphicon-question-sign chordInfo'></i></h4>
         <h5 style="margin-bottom: 0px" class="chordTitle">Network of subreddit mentions</h5>
-        <div class="redditChord" align="center"></div>
+        <div class="redditChord" align="left"></div>
         </div>
     </section>
 
